# youtube-utils

./: .gitignore  README.md  pyproject.toml
src/youtube_utils/: __init__.py  logger.py  run.py  watchlater.py
src/youtube_utils/youtube/: __init__.py  utils.py
