[project]
name = "youtube-utils"
version = "0.2.0"
description = "Add your description here"
authors = [
    { name = "ax-sh", email = "56112475+ax-sh@users.noreply.github.com" }
]
dependencies = [
    "yt-dlp>=2024.3.10",
    "pandas>=2.2.1",
    "google-api-python-client>=2.125.0",
    "youtube-unofficial @ git+https://github.com/Tatsh/youtube-unofficial/",
    "typing-extensions>=4.11.0",
    "browser-cookie3>=0.19.1",
    "requests>=2.31.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/youtube_utils"]

[project.scripts]
start = 'youtube_utils.run:main'
# dev = 'youtube_utils'
# dev = 'python src/youtube_utils/'